--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -238,7 +238,7 @@
       "                                                  ['Origin'])])),\n",
       "                ('selectkbest',\n",
       "                 SelectKBest(k=6,\n",
-      "                             score_func=<function f_regression at 0x0000023AC946C5E0>)),\n",
+      "                             score_func=<function f_regression at 0x0000022F10DC45E0>)),\n",
       "                ('estimator', LinearRegression())]):\n",
       "  MSE: 11.177256954645397\n",
       "  MAE: 2.5245179764301895\n",
@@ -283,54 +283,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "c:\\Users\\Casa\\Documents\\PREDICTIVA\\PRE-09-selectkbest-para-regresion-joanboterole10\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:698: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
      ]
     }
    ],
