--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -238,7 +238,7 @@
       "                                                  ['Origin'])])),\n",
       "                ('selectkbest',\n",
       "                 SelectKBest(k=6,\n",
-      "                             score_func=<function f_regression at 0x0000022F10DC45E0>)),\n",
+      "                             score_func=<function f_regression at 0x0000026D96BDF5E0>)),\n",
       "                ('estimator', LinearRegression())]):\n",
       "  MSE: 11.177256954645397\n",
       "  MAE: 2.5245179764301895\n",
